--- a/front-end/TEST1/index.html
+++ b/front-end/TEST1/index.html
@@ -15,16 +15,17 @@
 <body>
 
     <!-- ---navbar-sevtion------start------------ -->
-    <nav class="white z-depth-0">
+    <nav class="white z-depth-0 top_navbar">
         <div class="nav-wrapper">
-            <a href="#!" class="blue-text">Home</a>
+            <a href="#!" class="blue-text hide-on-med-and-up">Home</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger blue-text"><i
                     class="material-icons">menu</i></a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">Javascript</a></li>
-                <li><a href="mobile.html">Mobile</a></li>
+            <ul class="hide-on-med-and-down">
+                <li><a href="/" class="blue-text">Home</a></li>
+                <li><a href="/front-end/TEST1/users.html" class="blue-text">User Management</a></li>
+                <li><a href="https://codeyad.com" class="blue-text">Codeyad</a></li>
+                <li><a href="https://www.youtube.com/channel/UC7_WFOLcQ4x9HCat_pE3hcA" class="blue-text">AQ Fast
+                        Learn</a></li>
             </ul>
         </div>
     </nav>
@@ -35,9 +36,9 @@
                 <div class="background">
                     <img src="/front-end/TEST1/assets/images/office-2.webp" class="w-full">
                 </div>
-                <a href="#user"><img class="circle" src="/front-end/TEST1/assets/images/avatar.png"></a>
-                <a href="#name"><span class="white-text name">Hossein Azimi</span></a>
-                <a href="#email"><span class="white-text email">Hossein@email.com</span></a>
+                <a><img class="circle" src="/front-end/TEST1/assets/images/avatar.png"></a>
+                <a><span class="white-text name">Hossein Azimi</span></a>
+                <a><span class="white-text email">Hossein@email.com</span></a>
             </div>
         </li>
         <li><a href="https://www.youtube.com/channel/UC7_WFOLcQ4x9HCat_pE3hcA"><i
@@ -47,8 +48,8 @@
             <div class="divider"></div>
         </li>
         <li><a class="subheader">Pages :</a></li>
-        <li><a class="waves-effect" href="#!">Home</a></li>
-        <li><a class="waves-effect" href="#!">Users</a></li>
+        <li><a class="waves-effect" href="/">Home</a></li>
+        <li><a class="waves-effect" href="/front-end/TEST1/users.html">Users</a></li>
 
     </ul>
     <!-- ---navbar-sevtion------end------------ -->
@@ -57,8 +58,12 @@
     <!-- ---home-sevtion------start------------ -->
     <section class="flex-c-m flex-col sizefull p-r-20 p-l-20 p-t-100">
         <img src="/front-end/TEST1/assets/images/codeyad.png" class="w-full max-w-200 filter_shadow">
-        <a href="https://www.youtube.com/channel/UC7_WFOLcQ4x9HCat_pE3hcA" class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 mb-10 rounded_pill">Programming Tutorial</a>
-        <a href="/front-end/TEST1/users.html" class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 mb-10 rounded_pill">Users Manager</a>
+        <a href="https://www.youtube.com/channel/UC7_WFOLcQ4x9HCat_pE3hcA"
+            class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 mb-10 rounded_pill">Programming
+            Tutorial</a>
+        <a href="/front-end/TEST1/users.html"
+            class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 mb-10 rounded_pill">Users
+            Manager</a>
     </section>
     <!-- ---home-sevtion------end------------ -->
 
