--- a/front-end/TEST1/users.html
+++ b/front-end/TEST1/users.html
@@ -57,16 +57,16 @@
 
     <!-- ---content-sevtion------start------------ -->
 
-    <section id="top_actions_section">
+    <section id="top_actions_section" class="row">
         <!-- ---add-button------ -->
-        <div class="p-l-10 p-r-10 p-t-10">
+        <div class="p-l-10 p-r-10 p-t-10 col s12 m3 l2">
             <button class="waves-effect waves-light btn blue darken-2 p-l-30 p-r-30 w-full rounded_pill flex-c">
                 <i class="material-icons m-r-5">add</i>
                 Add User
             </button>
         </div>
         <!-- ---search-button------ -->
-        <div class="row">
+        <div class="row col s12 m9 l8">
             <div class="input-field col s12">
                 <input id="search" type="text" class="validate">
                 <label for="search">
@@ -76,6 +76,7 @@
             </div>
         </div>
 
+        <div class="col l2 hide-on-med-and-down"></div>
 
 
 
