--- a/front-end/TEST1/index.html
+++ b/front-end/TEST1/index.html
@@ -59,10 +59,10 @@
     <section class="flex-c-m flex-col sizefull p-r-20 p-l-20 p-t-100">
         <img src="/front-end/TEST1/assets/images/codeyad.png" class="w-full max-w-200 filter_shadow">
         <a href="https://www.youtube.com/channel/UC7_WFOLcQ4x9HCat_pE3hcA"
-            class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 mb-10 rounded_pill">Programming
+            class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 m-b-10 rounded_pill">Programming
             Tutorial</a>
         <a href="/front-end/TEST1/users.html"
-            class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 mb-10 rounded_pill">Users
+            class="waves-effect waves-light btn blue darken-3 w-full max-w-250 m-t-10 m-b-10 rounded_pill">Users
             Manager</a>
     </section>
     <!-- ---home-sevtion------end------------ -->
