--- a/front-end/TEST1/users.html
+++ b/front-end/TEST1/users.html
@@ -8,7 +8,7 @@
     <title>MY_PROJECT</title>
     <link rel="stylesheet" href="/front-end/TEST1/assets/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="/front-end/TEST1/assets/css/util.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/front-end/TEST1/assets/css/style.css">
 </head>
 
@@ -18,7 +18,7 @@
     <nav class="white z-depth-0 top_navbar">
         <div class="nav-wrapper">
             <a href="#!" class="blue-text hide-on-med-and-up">Users Management</a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger blue-text"><i
+            <a href="#!" data-target="mobile-demo" class="sidenav-trigger blue-text"><i
                     class="material-icons">menu</i></a>
             <ul class="hide-on-med-and-down">
                 <li><a href="/" class="blue-text">Home</a></li>
@@ -57,7 +57,7 @@
 
     <!-- ---content-sevtion------start------------ -->
 
-    <section id="top_actions_section" class="row">
+    <section id="top_actions_section" class="row m-b-0">
         <!-- ---add-button------ -->
         <div class="p-l-10 p-r-10 p-t-10 col s12 m3 l2">
             <button class="waves-effect waves-light btn blue darken-2 p-l-30 p-r-30 w-full rounded_pill flex-c">
@@ -65,8 +65,8 @@
                 Add User
             </button>
         </div>
-        <!-- ---search-button------ -->
-        <div class="row col s12 m9 l8">
+        <!-- ---search-section------ -->
+        <div class="row col s12 m9 l8 m-b-5">
             <div class="input-field col s12">
                 <input id="search" type="text" class="validate">
                 <label for="search">
@@ -82,6 +82,62 @@
 
     </section>
 
+    <section class="user_list_section">
+        <ul class="collapsible">
+            <li class="users_list_item">
+                <div class="collapsible-header">
+                    <i class="material-icons blue-text darken-2 users_list_arrow_icon trans-0-2">arrow_drop_down_circle</i>
+                    Hossein Azimi
+                </div>
+                <div class="collapsible-body">
+                    <div class="p-all-5">
+                        <span class="f-bold">Username : </span>
+                        <span> Hoseein</span>
+                    </div>
+                    <div class="p-all-5">
+                        <span class="f-bold">Email : </span>
+                        <span> Hoseein@gamil.com</span>
+                    </div>
+                    <div class="p-all-5">
+                        <span class="f-bold">Address : </span>
+                        <span> berlin - exmple street ...</span>
+                    </div>
+                    <div class="p-all-5 flex-l-m">
+                        <span class="f-bold">Action : </span>
+                        <i class="material-icons red-text m-l-5 m-r-5">delete_forevr</i>
+                        <i class="material-icons orange-text darken-3 m-l-5 m-r-5">edit</i>
+                    </div>
+                </div>
+            </li>
+            <li class="users_list_item">
+                <div class="collapsible-header">
+                    <i class="material-icons blue-text darken-2 users_list_arrow_icon trans-0-2">arrow_drop_down_circle</i>
+                    Hossein Azimi
+                </div>
+                <div class="collapsible-body">
+                    <div class="p-all-5">
+                        <span class="f-bold">Username : </span>
+                        <span> Hoseein</span>
+                    </div>
+                    <div class="p-all-5">
+                        <span class="f-bold">Email : </span>
+                        <span> Hoseein@gamil.com</span>
+                    </div>
+                    <div class="p-all-5">
+                        <span class="f-bold">Address : </span>
+                        <span> berlin - exmple street ...</span>
+                    </div>
+                    <div class="p-all-5 flex-l-m">
+                        <span class="f-bold">Action : </span>
+                        <i class="material-icons red-text m-l-5 m-r-5">delete_forevr</i>
+                        <i class="material-icons orange-text darken-3 m-l-5 m-r-5">edit</i>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </section>
+
+
 
 
 
@@ -90,6 +146,7 @@
 
     <script src="/front-end/TEST1/assets/materialize/js/materialize.min.js"></script>
     <script src="/front-end/TEST1/assets/js/main.js"></script>
+    <script src="/front-end/TEST1/assets/js/users.js"></script>
 </body>
 
 </html>
