--- a/front-end/TEST1/users.html
+++ b/front-end/TEST1/users.html
@@ -57,7 +57,7 @@
 
     <!-- ---content-sevtion------start------------ -->
 
-    <section id="top_actions_section" class="row m-b-0">
+    <section id="top_actions_section" class="row m-b-0 container">
         <!-- ---add-button------ -->
         <div class="p-l-10 p-r-10 p-t-10 col s12 m3 l2">
             <button class="waves-effect waves-light btn blue darken-2 p-l-30 p-r-30 w-full rounded_pill flex-c">
@@ -86,7 +86,8 @@
         <ul class="collapsible hide-on-med-and-up">
             <li class="users_list_item">
                 <div class="collapsible-header">
-                    <i class="material-icons blue-text darken-2 users_list_arrow_icon trans-0-2">arrow_drop_down_circle</i>
+                    <i
+                        class="material-icons blue-text darken-2 users_list_arrow_icon trans-0-2">arrow_drop_down_circle</i>
                     Hossein Azimi
                 </div>
                 <div class="collapsible-body">
@@ -111,7 +112,8 @@
             </li>
             <li class="users_list_item">
                 <div class="collapsible-header">
-                    <i class="material-icons blue-text darken-2 users_list_arrow_icon trans-0-2">arrow_drop_down_circle</i>
+                    <i
+                        class="material-icons blue-text darken-2 users_list_arrow_icon trans-0-2">arrow_drop_down_circle</i>
                     Hossein Azimi
                 </div>
                 <div class="collapsible-body">
@@ -198,6 +200,28 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
+
+
+        <div
+            class="pagination_container container p-l-9 p-r-9 p-t-15 p-b-10 flex-sb-m pos-fixed left-0 right-0 bottom-0 z-depth-4 rounded_top_30">
+
+            <div class="parallax-item_counts flex-l p-l-10 flex-l-m">
+                Showing
+                <span class="m-l-5 m-r-5 max-w-50">
+                    <input type="number" class="blue-text darken-2 no-border center-align m-b-0" value="10">
+                </span>
+                of
+                <span class="blue-text darken-2 m-l-5 m-r-5">100</span>
+            </div>
+
+            <div class="pagination_buttons">
+                <i
+                    class="material-icons blue darken-2 m-l-5 m-r-5 p-l-5 p-r-5 p-t-1 p-b-3 waves-effect waves-light white-text rounded_pill">keyboard_arrow_left</i>
+                <i
+                    class="material-icons blue darken-2 m-l-5 m-r-5 p-l-5 p-r-5 p-t-1 p-b-3 waves-effect waves-light white-text rounded_pill">keyboard_arrow_right</i>
+            </div>
+
         </div>
 
 
