--- a/front-end/TEST1/index.html
+++ b/front-end/TEST1/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY_PROJECT</title>
     <link rel="stylesheet" href="/front-end/TEST1/assets/materialize/css/materialize.min.css">
+    <link rel="stylesheet" href="/front-end/TEST1/assets/materialize/css/materialize-rtl.css">
     <link rel="stylesheet" href="/front-end/TEST1/assets/css/util.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/front-end/TEST1/assets/css/style.css">
@@ -69,7 +70,7 @@
 
 
     <script src="/front-end/TEST1/assets/materialize/js/materialize.min.js"></script>
-    <script src="/front-end/TEST1/assets/js/main.js"></script>
+    <script src="/front-end/TEST1/assets/js/app.js"></script>
 </body>
 
 </html>
