--- a/front-end/TEST1/users.html
+++ b/front-end/TEST1/users.html
@@ -157,7 +157,7 @@
                 </thead>
 
 
-                <tbody>
+                <tbody class="desktop_table_body">
                     <tr>
                         <td>1</td>
                         <td>Hossein Azimi</td>
