--- a/front-end/TEST1/index.html
+++ b/front-end/TEST1/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY_PROJECT</title>
     <link rel="stylesheet" href="/front-end/TEST1/assets/materialize/css/materialize.min.css">
-    <link rel="stylesheet" href="/front-end/TEST1/assets/materialize/css/materialize-rtl.css">
     <link rel="stylesheet" href="/front-end/TEST1/assets/css/util.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+    <link rel="stylesheet" href="/front-end/TEST1/assets/materialize/css/icons.css">
     <link rel="stylesheet" href="/front-end/TEST1/assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/front-end/TEST1/assets/images/favicon.ico">
 </head>
 
 <body>
@@ -69,8 +70,11 @@
     <!-- ---home-sevtion------end------------ -->
 
 
+    <!-- <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script> -->
+    <script defer src="/front-end/TEST1/assets/js/alpine.js"></script>
     <script src="/front-end/TEST1/assets/materialize/js/materialize.min.js"></script>
     <script src="/front-end/TEST1/assets/js/app.js"></script>
+    <script src="/front-end/TEST1/assets/js/users.js"></script>
 </body>
 
 </html>
