--- a/front-end/TEST1/users.html
+++ b/front-end/TEST1/users.html
@@ -231,10 +231,10 @@
     </section>
 
 
-    <section id="test_section" class="grey" x-data="{message: 'I Love Programming'}">
+    <section id="test_section" class="grey" x-data="mainData()">
         111
         <span x-text="message" class="red"></span>
-        <button class="btn" x-on:click="message = 'I Love Alpine'">click</button>
+        <button class="btn" x-on:click="testFunc()">click</button>
     </section>
 
 
@@ -275,6 +275,7 @@
 
     <!-- <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script> -->
     <script defer src="/front-end/TEST1/assets/js/alpine.js"></script>
+    <script src="/front-end/TEST1/assets/js/alpineJsContollers/mainContoller.js"></script>
     <script src="/front-end/TEST1/assets/materialize/js/materialize.min.js"></script>
     <script src="/front-end/TEST1/assets/js/app.js"></script>
     <script src="/front-end/TEST1/assets/js/users.js"></script>
