--- a/front-end/TEST1/index.html
+++ b/front-end/TEST1/index.html
@@ -70,8 +70,11 @@
     <!-- ---home-sevtion------end------------ -->
 
 
+
+    <script src="/front-end/TEST1/assets/js/axios.js"></script>
     <!-- <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script> -->
     <script defer src="/front-end/TEST1/assets/js/alpine.js"></script>
+    <script src="/front-end/TEST1/assets/js/alpineJsContollers/usersContoller.js"></script>
     <script src="/front-end/TEST1/assets/materialize/js/materialize.min.js"></script>
     <script src="/front-end/TEST1/assets/js/app.js"></script>
     <script src="/front-end/TEST1/assets/js/users.js"></script>
