--- a/front-end/TEST1/users.html
+++ b/front-end/TEST1/users.html
@@ -199,9 +199,10 @@
 
 
 
-    <div class="add_user_modal_back" x-bind:class="{'dis-none' : !showAddModal}" x-on:click="showAddModal = false">
+    <div class="add_user_modal_back" x-show="showAddModal" x-transition x-on:click="showAddModal = false">
     </div>
-    <div class="add_user_modal container rounded_top_30 trans-0-1" x-bind:class="{'show' : showAddModal}">
+    <!-- {'show' : showAddModal} -->
+    <div class="add_user_modal container rounded_top_30 trans-0-3" x-bind:class="showAddModal && 'show'">
         <div class="row p-t-10 p-b-10 p-r-40 p-l-40 center-on-small-only">
             <h5>
                 <i class="material-icons m-r-10 m-l-10 pos-relative top-4">person_add</i>
