--- a/front-end/TEST1/users.html
+++ b/front-end/TEST1/users.html
@@ -110,7 +110,7 @@
 
     <section class="user_list_section" x-init="getUsers()">
         <ul class="collapsible hide-on-med-and-up">
-            <template x-for="user in users">
+            <template x-for="user in pageUsers">
                 <li class="users_list_item">
                     <div class="collapsible-header">
                         <i
@@ -156,7 +156,7 @@
 
 
                 <tbody class="desktop_table_body">
-                    <template x-for="user in users">
+                    <template x-for="user in pageUsers">
                         <tr>
                             <td x-text="user.id"></td>
                             <td x-text="user.name"></td>
